<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_60sdp"
                    android:layout_margin="@dimen/_20sdp"
                    android:src="@drawable/gadget_black_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/text_hi_welcome"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/colorDarkText"
                    android:textSize="@dimen/very_large_text_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"

                    android:text="@string/text_login_to_your_account"
                    android:textColor="@color/colorDarkText" />

                <TextView
                    style="@style/EditTextLabelAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/label_enter_your_phone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:padding="@dimen/_8sdp"
                        android:layout_width="0dp"
                        android:fontFamily="@font/montserrat_semibold"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/large_text_size"
                        android:text="@string/hint_country_code"
                        android:focusable="false"
                        android:background="@drawable/shape_bottom_line"
                        android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_weight=".25" />

                    <EditText
                        android:id="@+id/numberet"
                        android:layout_width="0dp"
                        android:hint="@string/hint_phone_number"
                        android:textColorHint="@color/colorEditTextHint"
                        android:fontFamily="@font/montserrat_semibold"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:maxLength="12"
                        android:padding="@dimen/_8sdp"
                        android:background="@drawable/shape_bottom_line"
                        android:layout_height="wrap_content"
                        android:layout_weight=".75" />

                </LinearLayout>

                <TextView
                    style="@style/EditTextLabelAppearance"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/label_enter_your_password" />

                <EditText
                    android:id="@+id/passwordet"
                    android:layout_width="match_parent"
                    android:visibility="gone"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColorHint="@color/colorEditTextHint"
                    android:fontFamily="@font/montserrat_semibold"
                    android:padding="@dimen/_8sdp"
                    android:background="@drawable/shape_bottom_line"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/forgotpasswordtv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorHyperLink"
                    android:visibility="gone"
                    android:text="@string/text_forgot_password"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_marginTop="@dimen/_20sdp"/>

                <Button
                    android:id="@+id/btnlogin"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/ButtonAppearance"
                    android:fontFamily="@font/montserrat_medium"

                    android:text="@string/login"/>


            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center"
            android:padding="@dimen/_12sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/text_new_account"
                android:textColor="@color/colorDarkText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:text="@string/register_underline"
                android:id="@+id/registerTV"
                android:textSize="15sp"
                android:layout_marginStart="8sp"
                android:textAllCaps="true"
                android:fontFamily="@font/montserrat_medium"
                />


        </LinearLayout>


    </LinearLayout>

</layout>