<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".ui.auth.profile_set_up.SetupProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/setup_profile_title"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/colorDarkText"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/fill_your_personal_detail"
            android:textColor="@color/colorDarkText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="@dimen/_30sdp">

            <FrameLayout
                android:id="@+id/profile_image_frame"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_75sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.github.florent37.shapeofview.shapes.CircleView
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_70sdp"
                    >

                    <ImageView
                        android:id="@+id/profile_pic_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"


                        android:scaleType="fitXY"
                        android:src="@drawable/dp_palceholder" />
                </com.github.florent37.shapeofview.shapes.CircleView>

                <com.github.florent37.shapeofview.shapes.CircleView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="end|bottom"
                    android:elevation="4dp">

                    <ImageView
                        android:id="@+id/upload_pic_image_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorWhitePure"
                        android:padding="@dimen/_6sdp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/ic_camera" />

                </com.github.florent37.shapeofview.shapes.CircleView>

            </FrameLayout>

            <TextView
                style="@style/EditTextLabelAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorEditTextHint"
                android:fontFamily="@font/montserrat_medium"
                android:layout_marginTop="@dimen/_4sdp"
                android:textSize="@dimen/_10ssp"
                android:text="@string/upload_photo_text" />

        </LinearLayout>

        <TextView
            style="@style/EditTextLabelAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/label_enter_your_name" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:hint="@string/hint_name"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textColorHint="@color/colorEditTextHint"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/shape_bottom_line"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/EditTextLabelAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/label_enter_your_email" />

        <EditText
            android:id="@+id/email_id_edit_text"
            android:layout_width="match_parent"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColorHint="@color/colorEditTextHint"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="@dimen/_12ssp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/shape_bottom_line"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/EditTextLabelAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/label_enter_your_country" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp_country_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:ccp_showNameCode="false"
                app:ccp_showFlag="true"
                app:ccp_showPhoneCode="false"
                app:ccp_showFullName="true"
                app:ccpDialog_showPhoneCode="false"
                android:visibility="invisible"/>

            <EditText
                android:id="@+id/nationalityet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/shape_bottom_line"
                android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/_12ssp"
                android:hint="@string/hint_country"
                android:imeOptions="actionDone"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:singleLine="true"
                android:editable="false"
                android:focusable="false"
                android:cursorVisible="false"
                android:textColorHint="@color/colorEditTextHint" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/EditTextLabelAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_10ssp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/label_gender_optional" />

        <RadioGroup
            android:id="@+id/gendergroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8ssp">

            <RadioButton
                android:id="@+id/maleradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_male"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/_12ssp"
                android:paddingLeft="@dimen/_8ssp"/>

            <RadioButton
                android:id="@+id/femaleradio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender_female"
                android:paddingLeft="@dimen/_8ssp"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="@dimen/_12ssp"
                android:layout_marginLeft="@dimen/_15ssp"/>

        </RadioGroup>

        <Button
            android:id="@+id/btnfinish"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonAppearance"
            android:fontFamily="@font/montserrat_medium"

            android:text="@string/finish"/>

        <TextView
            style="@style/EditTextLabelAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/profile_setup_tnc"/>
    </LinearLayout>
    </ScrollView>
    </LinearLayout>
</layout>
